--- a/src/components/Cohorts.css
+++ b/src/components/Cohorts.css
@@ -1,29 +1,98 @@
-.cohorts h3 {
+* {
+  box-sizing: inherit;
+  transition-property: all;
+  transition-duration: .6s;
+  transition-timing-function: ease;
+}
+
+.cohorts_box h4 {
+  color: #fff;
+  margin-left: -50%;
+  font-size: larger;
+}
+
+.cohorts_box h4:hover {
+  letter-spacing: 1px;
+}
+
+
+.cohorts_box h3 {
     text-align: center;
 }
 
-.cohorts_list {
-    display: grid;
-    grid-template-columns: 1fr;
-}
-
-.cohorts_list button {
-    border: none;
-    background: none;
-    color:rgb(0, 117, 243);
-    text-align: left;
+.cohorts_box {
+  display: flex;
+  flex-direction: column;
+    height: 100%;
+    justify-content: center;
+    text-align: center;
+    width: 100%;
 }
 
 
-
-button:hover, li:hover {
-    color: rgb(0, 117, 243);
-    cursor: pointer;
+.cohorts_box button {
+  color: #fff;
+  cursor: pointer;
+   display: block;
+  font-size:16px;
+  font-weight: 400;
+  line-height: 45px;
+  margin: 0 0 2em;
+  max-width: 160px; 
+  position: relative;
+  text-decoration: none;
+  text-transform: uppercase;
+  width: 100%; 
+  background: none;
 }
 
-/* hr {
-    width: 300px;
-    height: 2px;
-    background-color: aqua;
-    text-align: left;
-} */
+
+.cohorts_box button {
+  border-color: #fff;
+  transition: width 350ms ease-in-out;
+  width: 70%;
+}
+
+li {
+  list-style: none;
+  margin: auto;
+}
+
+.cohorts_box button:hover {
+  border-color:  rgb(0, 117, 243);
+  color: rgb(253, 255, 229);
+  cursor: pointer;
+  font-size: 15px;
+  letter-spacing: 2px;
+}
+
+
+
+  
+
+    #all_students_button {
+      color: white;
+      background-color: rgb(230, 0, 255);
+    }
+
+  
+
+    /* width */
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #888;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
+}
