--- a/src/components/Students.css
+++ b/src/components/Students.css
@@ -19,9 +19,23 @@ img {
 }
 
 .card:hover {
-    width: 98%;
-    /* height: 40%; */
+    /* width: 98%;
+    height: 30%; */
+    border-color: rgb(0, 117, 243);
+    animation: glow 1s infinite;
 }
+
+@keyframes glow {
+    0% {
+      box-shadow: 0 0 5px rgba(0, 117, 243, 0.7);
+    }
+    50% {
+      box-shadow: 0 0 20px rgba(0, 117, 243, 0.7);
+    }
+    100% {
+      box-shadow: 0 0 5px rgba(0, 117, 243, 0.7);
+    }
+  }
 
 .general_info {
     display: grid;
